build_log.txt
    Checking MuginCAD v0.1.0 (C:\Users\sarib\Desktop\HakanCalismalar\Rust\MuginCAD\crates\mugin_cad)
warning: unused import: `eframe::egui::Color32`
 --> crates\mugin_cad\src\model\structure\column_type.rs:1:5
  |
1 | use eframe::egui::Color32;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `values_mut` found for struct `std::vec::Vec<Entity>` in the current scope
   --> crates\mugin_cad\src\view\ui\structure\columns.rs:158:34
    |
158 |     for entity in model.entities.values_mut() {
    |                                  ^^^^^^^^^^
    |
help: there is a method `as_mut` with a similar name
    |
158 -     for entity in model.entities.values_mut() {
158 +     for entity in model.entities.as_mut() {
    |

warning: variable does not need to be mutable
  --> crates\mugin_cad\src\view\ui\structure\columns.rs:63:21
   |
63 |                 let mut new_col =
   |                     ----^^^^^^^
   |                     |
   |                     help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable `definitions_added` is assigned to, but never used
  --> crates\mugin_cad\src\view\ui\structure\columns.rs:20:9
   |
20 |     let mut definitions_added = false; // To track if we added a new col
   |         ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: consider using `_definitions_added` instead
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `definitions_added` is never read
   --> crates\mugin_cad\src\view\ui\structure\columns.rs:132:17
    |
132 |                 definitions_added = true;
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0599`.
warning: `MuginCAD` (bin "MuginCAD") generated 4 warnings
error: could not compile `MuginCAD` (bin "MuginCAD") due to 1 previous error; 4 warnings emitted
